@@ -1,24 +1,0 @@
-@comment $NetBSD: PLIST,v 1.5 2012/04/08 20:21:50 wiz Exp $
-${PYSITELIB}/${EGG_FILE}
-${PYSITELIB}/psyco/__init__.py
-${PYSITELIB}/psyco/__init__.pyc
-${PYSITELIB}/psyco/__init__.pyo
-${PYSITELIB}/psyco/_psyco.so
-${PYSITELIB}/psyco/classes.py
-${PYSITELIB}/psyco/classes.pyc
-${PYSITELIB}/psyco/classes.pyo
-${PYSITELIB}/psyco/core.py
-${PYSITELIB}/psyco/core.pyc
-${PYSITELIB}/psyco/core.pyo
-${PYSITELIB}/psyco/kdictproxy.py
-${PYSITELIB}/psyco/kdictproxy.pyc
-${PYSITELIB}/psyco/kdictproxy.pyo
-${PYSITELIB}/psyco/logger.py
-${PYSITELIB}/psyco/logger.pyc
-${PYSITELIB}/psyco/logger.pyo
-${PYSITELIB}/psyco/profiler.py
-${PYSITELIB}/psyco/profiler.pyc
-${PYSITELIB}/psyco/profiler.pyo
-${PYSITELIB}/psyco/support.py
-${PYSITELIB}/psyco/support.pyc
-${PYSITELIB}/psyco/support.pyo
